# kubernetes-go-api

./: .gitignore  Cargo.toml  Makefile
.github/workflows/: ci.yaml
hack/: download-nmstate-e2e-artifacts.sh  download-nmstate-e2e-assets.sh
test/: go.mod  go.sum
test/api/: types_test.go
test/crd/: Makefile  nmstate.io_clusternetworkstate.yaml  types.go  types_test.go
v2/: encoding.go  go.mod  zz_generated.deepcopy.go  zz_generated.types.go
